--- a/src-bundle/tsconfig.json
+++ b/src-bundle/tsconfig.json
@@ -16,6 +16,7 @@
 			"@ixfx/dom":["../packages/dom/dist/src"],
 			"@ixfx/events":["../packages/events/dist/src"],
 			"@ixfx/flow":["../packages/flow/dist/src"],
+			"@ixfx/flow/*":["../packages/flow/dist/src/*"],
 			"@ixfx/geometry":["../packages/geometry/dist/src"],
 			"@ixfx/guards":["../packages/guards/dist/src"],
 			"@ixfx/iterables":["../packages/iterables/dist/src"],
