--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"clean": "pnpm --recursive exec rm -rf dist",
 		"rebuild": "pnpm run clean && pnpm run build",
 		"test": "vitest --api",
-		"publint": "pnpm --recursive --filter=\"./packages/**\" exec publint"
+		"publint": "pnpm --recursive --filter=\"./packages/**\" exec publint",
+		"docs": "typedoc"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.29.2",
@@ -32,5 +33,8 @@
 		"vitest": "3.1.2"
 	},
 	"packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"typedoc": "0.28.7"
+	}
 }
