--- a/packages/geometry/package.json
+++ b/packages/geometry/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ixfx/geometry",
-	"version": "0.37.0",
+	"version": "0.38.0",
 	"license": "MIT",
 	"type": "module",
 	"sideEffects": false,
@@ -66,7 +66,8 @@
 		"@ixfx/guards": "workspace:^",
 		"@ixfx/numbers": "workspace:^",
 		"@ixfx/random": "workspace:^",
-		"@ixfx/collections": "workspace:^"
+		"@ixfx/collections": "workspace:^",
+		"@ixfx/trackers": "workspace:^"
 	},
 	"publishConfig": {
 		"main": "dist/src/index.js",
