--- a/packages/events/tsconfig.json
+++ b/packages/events/tsconfig.json
@@ -3,5 +3,8 @@
 	"compilerOptions": {
 		"outDir": "dist"
 	},
-	"include": ["src/**/*", "__tests__/**/*"]
+	"include": [
+		"src/**/*",
+		"__tests__/**/*"
+	]
 }
