--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"publint": "^0.3.12",
 		"rolldown": "1.0.0-beta.8",
 		"tsup": "8.4.0",
+		"typedoc-plugin-markdown": "4.7.0",
 		"typescript": "5.8.3",
 		"typescript-eslint": "8.31.1",
 		"vitest": "3.1.2"
