--- a/packages/arrays/package.json
+++ b/packages/arrays/package.json
@@ -17,7 +17,7 @@
 		"@ixfx/guards": "workspace:^"
 	},
 	"publishConfig": {
-		"main": "dist/src/index.js",
+		"main": "./dist/src/index.js",
 		"exports": {
 			".": {
 				"types": "./dist/src/index.d.ts",
