--- a/package.json
+++ b/package.json
@@ -1,41 +1,48 @@
 {
 	"license": "MIT",
+	"name": "ixfx",
 	"scripts": {
 		"build": "tsc --build",
 		"clean": "pnpm --recursive exec rm -rf dist",
 		"rebuild": "pnpm run clean && pnpm run build",
 		"test": "vitest --api",
 		"publint": "pnpm --recursive --filter=\"./packages/**\" exec publint",
-		"docs": "typedoc"
+		"docs": "typedoc",
+		"bundle": "tsup",
+		"bundle-tsdown": "tsdown -d ./bundle-tsdown",
+		"pkgroll": "pkgroll --target=es2024 --clean-dist "
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.29.2",
-		"@eslint/js": "9.25.1",
-		"@microsoft/api-extractor": "7.52.5",
-		"@parcel/transformer-typescript-types": "2.14.4",
-		"@rslib/core": "0.6.7",
+		"@changesets/cli": "^2.29.5",
+		"@eslint/js": "9.31.0",
+		"@microsoft/api-extractor": "7.52.8",
+		"@parcel/transformer-typescript-types": "2.15.4",
+		"@rslib/core": "0.11.0",
 		"@svitejs/changesets-changelog-github-compact": "^1.2.0",
-		"@types/node": "^22.15.0",
+		"@types/node": "^24.1.0",
 		"copyfiles": "2.4.1",
 		"del": "8.0.0",
-		"esbuild": "0.25.3",
-		"eslint": "9.25.1",
-		"eslint-plugin-unicorn": "59.0.0",
-		"execa": "9.5.2",
-		"globals": "16.0.0",
-		"hereby": "1.10.0",
-		"pkgroll": "2.12.2",
+		"esbuild": "0.25.8",
+		"eslint": "9.31.0",
+		"eslint-plugin-unicorn": "60.0.0",
+		"execa": "9.6.0",
+		"globals": "16.3.0",
+		"hereby": "1.11.0",
+		"parcel": "2.15.4",
+		"pkgroll": "2.14.3",
 		"publint": "^0.3.12",
-		"rolldown": "1.0.0-beta.8",
-		"tsup": "8.4.0",
-		"typedoc-plugin-markdown": "4.7.0",
+		"rolldown": "1.0.0-beta.29",
+		"tsdown": "0.13.0",
+		"tsup": "8.5.0",
+		"typedoc-plugin-markdown": "4.7.1",
 		"typescript": "5.8.3",
-		"typescript-eslint": "8.31.1",
-		"vitest": "3.1.2"
+		"typescript-eslint": "8.38.0",
+		"vitest": "3.2.4"
 	},
 	"packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
 	"type": "module",
 	"dependencies": {
 		"typedoc": "0.28.7"
-	}
+	},
+	"module": "./src-bundle/src/index.js"
 }
