--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -26,7 +26,7 @@
 		"@ixfx/numbers": "workspace:^"
 	},
 	"publishConfig": {
-		"main": "dist/src/index.js",
+		"main": "./dist/src/index.js",
 		"exports": {
 			".": {
 				"types": "./dist/src/index.d.ts",
