--- a/packages/events/package.json
+++ b/packages/events/package.json
@@ -18,7 +18,7 @@
 	},
 	"dependencies": {},
 	"publishConfig": {
-		"main": "dist/src/index.js",
+		"main": "./dist/src/index.js",
 		"exports": {
 			".": {
 				"types": "./dist/src/index.d.ts",
