--- a/src-bundle/package.json
+++ b/src-bundle/package.json
@@ -8,10 +8,10 @@
 		"dist/"
 	],
 	"dependencies": {
-		"tsdown": "0.10.1"
+		"tsdown": "0.13.0"
 	},
 	"scripts": {
-		"build": "tsdown"
+		"build": "tsc"
 	},
 	"devDependencies": {
 		"@ixfx/arrays": "file:../packages/arrays/dist/src",
@@ -23,14 +23,19 @@
 		"@ixfx/flow": "file:../packages/flow/dist/src",
 		"@ixfx/geometry": "file:../packages/geometry/dist/src",
 		"@ixfx/guards": "file:../packages/guards/dist/src",
-		"@ixfx/iterables": "file:../packages/iterables/dist/src",
 		"@ixfx/io": "file:../packages/io/dist/src",
+		"@ixfx/iterables": "file:../packages/iterables/dist/src",
 		"@ixfx/numbers": "file:../packages/numbers/dist/src",
 		"@ixfx/process": "file:../packages/process/dist/src",
 		"@ixfx/random": "file:../packages/random/dist/src",
 		"@ixfx/rx": "file:../packages/rx/dist/src",
 		"@ixfx/trackers": "file:../packages/trackers/dist/src",
 		"@ixfx/ui": "file:../packages/ui/dist/src",
-		"@ixfx/visual": "file:../packages/visual/dist/src"
-	}
+		"@ixfx/visual": "file:../packages/visual/dist/src",
+		"parcel": "2.15.4",
+		"pkgroll": "2.14.3"
+	},
+	"source": "./src/index.ts",
+	"types": "./dist/types.d.ts",
+	"module": "./dist/index.js"
 }
