--- a/package.json
+++ b/package.json
@@ -8,32 +8,24 @@
 		"test": "vitest --api",
 		"publint": "pnpm --recursive --filter=\"./packages/**\" exec publint",
 		"docs": "typedoc",
-		"bundle": "tsup",
-		"bundle-tsdown": "tsdown -d ./bundle-tsdown",
-		"pkgroll": "pkgroll --target=es2024 --clean-dist "
+		"bundle": "tsdown -d ./bundle && del ../ixfxfun/demos/ixfx && copyfiles ./bundle ../ixfxfun/demos/ixfx"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.29.5",
 		"@eslint/js": "9.31.0",
-		"@microsoft/api-extractor": "7.52.8",
 		"@parcel/transformer-typescript-types": "2.15.4",
 		"@rslib/core": "0.11.0",
 		"@svitejs/changesets-changelog-github-compact": "^1.2.0",
 		"@types/node": "^24.1.0",
 		"copyfiles": "2.4.1",
-		"del": "8.0.0",
+		"del-cli": "6.0.0",
 		"esbuild": "0.25.8",
 		"eslint": "9.31.0",
 		"eslint-plugin-unicorn": "60.0.0",
 		"execa": "9.6.0",
 		"globals": "16.3.0",
-		"hereby": "1.11.0",
-		"parcel": "2.15.4",
-		"pkgroll": "2.14.3",
 		"publint": "^0.3.12",
-		"rolldown": "1.0.0-beta.29",
 		"tsdown": "0.13.0",
-		"tsup": "8.5.0",
 		"typedoc-plugin-markdown": "4.7.1",
 		"typescript": "5.8.3",
 		"typescript-eslint": "8.38.0",
