--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,10 @@
 	"files": [
 		"dist/"
 	],
+	"dependencies": {
+		"@ixfx/debug": "workspace:^",
+		"@ixfx/guards": "workspace:^"
+	},
 	"exports": {
 		".": {
 			"types": "./src/index.ts",
@@ -37,12 +41,8 @@
 			"import": "./src/trackers/index.ts"
 		}
 	},
-	"dependencies": {
-		"@ixfx/debug": "workspace:^",
-		"@ixfx/guards": "workspace:^"
-	},
 	"publishConfig": {
-		"main": "./dist/src/index.js",
+		"main": "dist/src/index.js",
 		"exports": {
 			".": {
 				"types": "./dist/src/index.d.ts",
