--- a/packages/arrays/package.json
+++ b/packages/arrays/package.json
@@ -7,17 +7,17 @@
 	"files": [
 		"dist/"
 	],
+	"dependencies": {
+		"@ixfx/guards": "workspace:^"
+	},
 	"exports": {
 		".": {
 			"types": "./src/index.ts",
 			"import": "./src/index.ts"
 		}
 	},
-	"dependencies": {
-		"@ixfx/guards": "workspace:^"
-	},
 	"publishConfig": {
-		"main": "./dist/src/index.js",
+		"main": "dist/src/index.js",
 		"exports": {
 			".": {
 				"types": "./dist/src/index.d.ts",
