--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -7,12 +7,6 @@
 	"files": [
 		"dist/"
 	],
-	"exports": {
-		".": {
-			"types": "./src/index.ts",
-			"import": "./src/index.ts"
-		}
-	},
 	"devDependencies": {
 		"json5": "latest"
 	},
@@ -25,8 +19,14 @@
 		"@ixfx/random": "workspace:^",
 		"@ixfx/numbers": "workspace:^"
 	},
+	"exports": {
+		".": {
+			"types": "./src/index.ts",
+			"import": "./src/index.ts"
+		}
+	},
 	"publishConfig": {
-		"main": "./dist/src/index.js",
+		"main": "dist/src/index.js",
 		"exports": {
 			".": {
 				"types": "./dist/src/index.d.ts",
