--- a/packages/io/package.json
+++ b/packages/io/package.json
@@ -9,22 +9,22 @@
 	],
 	"dependencies": {
 		"@ixfx/arrays": "workspace:^",
-		"@ixfx/core": "workspace:^",
-		"@ixfx/dom": "workspace:^",
 		"@ixfx/collections": "workspace:^",
+		"@ixfx/core": "workspace:^",
 		"@ixfx/debug": "workspace:^",
+		"@ixfx/dom": "workspace:^",
 		"@ixfx/events": "workspace:^",
 		"@ixfx/flow": "workspace:^",
+		"@ixfx/geometry": "workspace:^",
 		"@ixfx/guards": "workspace:^",
+		"@ixfx/numbers": "workspace:^",
 		"@ixfx/random": "workspace:^",
 		"@ixfx/trackers": "workspace:^",
-		"@ixfx/numbers": "workspace:^",
-		"@ixfx/geometry": "workspace:^",
 		"@ixfx/visual": "workspace:^"
 	},
 	"devDependencies": {
 		"@types/dom-serial": "latest",
-		"@types/web-bluetooth": "latest"
+		"@types/web-bluetooth": "0.0.21"
 	},
 	"exports": {
 		".": {
