Added coverage script

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"clean": "pnpm --recursive exec rm -rf dist",
 		"rebuild": "pnpm run clean && pnpm run build",
 		"test": "vitest --api",
+		"coverage": "vitest run --coverage --coverage.exclude=**/types.ts --coverage.exclude=**/node_modules/** --coverage.exclude=**/dist/** --coverage.exclude=bundle/** --coverage.exclude=node_modules/** --coverage.exclude=**/__tests__/** --coverage.exclude=tests/**  --coverage.reportsDirectory ./tests/coverage",
 		"publint": "pnpm --recursive --filter=\"./packages/**\" exec publint",
 		"docs": "typedoc",
 		"pkg-strip": "node --experimental-strip-types package-rewrite.ts strip",
@@ -21,6 +22,7 @@
 		"@rslib/core": "0.11.0",
 		"@svitejs/changesets-changelog-github-compact": "^1.2.0",
 		"@types/node": "^24.1.0",
+		"@vitest/coverage-v8": "3.2.4",
 		"copyfiles": "2.4.1",
 		"del-cli": "6.0.0",
 		"esbuild": "0.25.8",
