--- a/packages/arrays/package.json
+++ b/packages/arrays/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "@ixfx/arrays",
-	"version": "0.41.1",
+	"version": "0.42.0",
+	"homepage": "https://ixfx.fun",
+	"author": "Clint Heyer <clint@thestaticvoid.net>",
 	"license": "MIT",
 	"type": "module",
 	"sideEffects": false,
