--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,19 @@
 .eslintcache
 .node_repl_history
 .env
+.DS_Store
+.tsimp
 build
-etc
 dist
 TODO.md
-*.log
-npm-debug.log*
 node_modules/
-.DS_Store
 espruino/__tests__/
 madge.txt
-.tsimp
 coverage
+bundle
 docs.json
+offline
+*.log
+npm-debug.log*
 *.add.json
 *.strip.json
-offline
