--- a/packages/guards/package.json
+++ b/packages/guards/package.json
@@ -5,8 +5,12 @@
 	"type": "module",
 	"sideEffects": false,
 	"files": [
-		"dist/"
+		"dist/",
+		"bundle/"
 	],
+	"scripts": {
+		"package-bundle": "tsdown"
+	},
 	"exports": {
 		".": {
 			"types": "./src/index.ts",
