--- a/packages/arrays/package.json
+++ b/packages/arrays/package.json
@@ -7,8 +7,12 @@
 	"type": "module",
 	"sideEffects": false,
 	"files": [
-		"dist/"
+		"dist/",
+		"bundle/"
 	],
+	"scripts": {
+		"package-bundle": "tsdown"
+	},
 	"dependencies": {
 		"@ixfx/guards": "workspace:^"
 	},
