--- a/packages/random/package.json
+++ b/packages/random/package.json
@@ -5,8 +5,12 @@
 	"type": "module",
 	"sideEffects": false,
 	"files": [
-		"dist/"
+		"dist/",
+		"bundle/"
 	],
+	"scripts": {
+		"package-bundle": "tsdown"
+	},
 	"dependencies": {
 		"@ixfx/guards": "workspace:^"
 	},
