--- a/packages/visual/package.json
+++ b/packages/visual/package.json
@@ -1,12 +1,16 @@
 {
 	"name": "@ixfx/visual",
-	"version": "0.42.2",
+	"version": "0.43.0",
 	"license": "MIT",
 	"type": "module",
 	"sideEffects": false,
 	"files": [
-		"dist/"
+		"dist/",
+		"bundle/"
 	],
+	"scripts": {
+		"package-bundle": "tsdown"
+	},
 	"dependencies": {
 		"@ixfx/arrays": "workspace:^",
 		"@ixfx/collections": "workspace:^",
