--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ixfx/ui",
-	"version": "0.42.0",
+	"version": "0.43.0",
 	"license": "MIT",
 	"type": "module",
 	"sideEffects": false,
@@ -15,6 +15,8 @@
 		"@ixfx/core": "workspace:^",
 		"@ixfx/collections": "workspace:^",
 		"@ixfx/dom": "workspace:^",
+		"@ixfx/geometry": "workspace:^",
+		"@ixfx/numbers": "workspace:^",
 		"@ixfx/visual": "workspace:^",
 		"@ixfx/rx": "workspace:^"
 	},
