--- a/packages/modulation/package.json
+++ b/packages/modulation/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ixfx/modulation",
-	"version": "0.46.0",
+	"version": "0.47.0",
 	"license": "MIT",
 	"type": "module",
 	"sideEffects": false,
@@ -9,7 +9,8 @@
 		"bundle/"
 	],
 	"scripts": {
-		"package-bundle": "tsdown"
+		"package-bundle": "tsdown",
+		"clean": "rm -rf dist && rm -rf bundle"
 	},
 	"dependencies": {
 		"@ixfx/arrays": "workspace:^",
