--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"packages-bundle-core": "pnpm run --parallel package-bundle",
 		"packages-bundle": "pnpm run pkg-strip && pnpm run packages-bundle-core && pnpm run pkg-add",
 		"release-prep": "pnpm run rebuild && pnpm run packages-bundle && pnpm run demos-copy && pnpm changeset",
-		"release": "pnpm changeset version && pnpm publish -r --no-git-checks"
+		"release": "pnpm changeset version && pnpm publish --recursive --no-git-checks"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.29.5",
