--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
 		"globals": "16.3.0",
 		"publint": "^0.3.12",
 		"tsdown": "0.13.0",
+		"typedoc": "0.28.7",
 		"typedoc-plugin-markdown": "4.7.1",
 		"typescript": "5.8.3",
 		"typescript-eslint": "8.38.0",
-		"vitest": "3.2.4",
-		"typedoc": "0.28.7"
+		"vite": "7.1.3",
+		"vitest": "3.2.4"
 	},
 	"packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
-	"type": "module",
-	"dependencies": {}
+	"type": "module"
 }
