--- a/packages/geometry/tsconfig.json
+++ b/packages/geometry/tsconfig.json
@@ -4,5 +4,9 @@
 		"outDir": "dist",
 		"rootDir": "."
 	},
-	"include": ["src/**/*", "__tests__/**/*"]
+	"include": [
+		"src/**/*",
+		"__tests__/**/*",
+		"__demos__/**/*"
+	]
 }
