--- a/package.json
+++ b/package.json
@@ -21,28 +21,25 @@
 		"release": "pnpm changeset version && pnpm publish --recursive --no-git-checks"
 	},
 	"devDependencies": {
-		"@changesets/cli": "^2.29.5",
-		"@eslint/js": "9.31.0",
-		"@parcel/transformer-typescript-types": "2.15.4",
-		"@rslib/core": "0.11.0",
+		"@changesets/cli": "^2.29.8",
+		"@eslint/js": "9.39.2",
+		"@rslib/core": "0.19.1",
 		"@svitejs/changesets-changelog-github-compact": "^1.2.0",
-		"@types/node": "^24.1.0",
-		"@vitest/coverage-v8": "3.2.4",
+		"@types/node": "^25.0.3",
+		"@vitest/coverage-v8": "4.0.16",
 		"copyfiles": "2.4.1",
-		"del-cli": "6.0.0",
-		"esbuild": "0.25.8",
-		"eslint": "9.31.0",
-		"eslint-plugin-unicorn": "60.0.0",
-		"execa": "9.6.0",
-		"globals": "16.3.0",
-		"publint": "^0.3.12",
-		"tsdown": "0.13.0",
-		"typedoc": "0.28.7",
-		"typedoc-plugin-markdown": "4.7.1",
-		"typescript": "5.8.3",
-		"typescript-eslint": "8.38.0",
-		"vite": "7.1.3",
-		"vitest": "3.2.4"
+		"del-cli": "7.0.0",
+		"eslint": "9.39.2",
+		"eslint-plugin-unicorn": "62.0.0",
+		"globals": "17.0.0",
+		"publint": "^0.3.16",
+		"tsdown": "0.19.0-beta.5",
+		"typedoc": "0.28.15",
+		"typedoc-plugin-markdown": "4.9.0",
+		"typescript": "5.9.3",
+		"typescript-eslint": "8.52.0",
+		"vite": "7.3.1",
+		"vitest": "4.0.16"
 	},
 	"packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
 	"type": "module"
