--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "pnpm run --filter=\"./packages/*\" --parallel build && tsdown",
     "build:serial": "NODE_OPTIONS='--no-deprecation' pnpm run --filter=\"./packages/*\" build && tsdown",
     "dev": "DEV=true tsdown",
+    "docs:build": "typedoc --out ../api-docs/docs --options typedoc.json --tsconfig tsconfig.lib.json",
     "tsdown": "tsdown",
     "clean": "rimraf -g dist coverage \"packages/*/dist\" && pnpm run -r --parallel clean",
     "test": "vitest",
@@ -23,6 +24,8 @@
     "@eslint/js": "catalog:",
     "@types/node": "catalog:",
     "@vitest/coverage-v8": "catalog:",
+    "@types/web-bluetooth": "latest",
+    "@types/w3c-web-serial": "latest",
     "bumpp": "catalog:",
     "change-case": "catalog:",
     "eslint": "catalog:",
@@ -34,6 +37,7 @@
     "tsdown": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
+    "typedoc": "catalog:",
     "unplugin": "catalog:",
     "unplugin-macros": "catalog:",
     "unplugin-unused": "catalog:",
