--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,11 +4,10 @@
     "jsx": "preserve",
     "jsxImportSource": "vue",
     "lib": [
-      "ES2024",
+      "ESNext",
       "DOM",
       "DOM.AsyncIterable",
       "DOM.Iterable",
-      "ESNext.Array"
     ],
     "module": "ESNext",
     "moduleResolution": "bundler",
