--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -7,7 +7,9 @@
       "dev"
     ],
     "types": [
-      "node"
+      "node",
+      "web-bluetooth",
+      "@types/w3c-web-serial"
     ],
     "allowJs": false,
     "declaration": true,
