--- a/typedoc.base.jsonc
+++ b/typedoc.base.jsonc
@@ -3,16 +3,33 @@
     // only with packages mode. The separate base config file is retained in this
     // example so that individual packages can be built for demonstration of the
     // advanced method in the readme.
-
     "$schema": "https://typedoc.org/schema.json",
     "includeVersion": true,
-    "exclude": ["**/__tests__/**/*"],
+    // "compilerOptions": {
+    //     "target": "ESNext",
+    //     "lib": [
+    //         "DOM",
+    //         "DOM.Iterable",
+    //         "ES2022.Array",
+    //         "ESNext"
+    //     ],
+    // },
+    "exclude": [
+        "**/tests/**/*",
+        "**/demos/**/*"
+    ],
     "sort": [
         "kind",
         "instance-first",
         "alphabetical-ignoring-documents"
     ],
-    "groupOrder": ["Namespaces","Functions","Category Name", "Other Category", "*"],
+    "groupOrder": [
+        "Namespaces",
+        "Functions",
+        "Category Name",
+        "Other Category",
+        "*"
+    ],
     "kindSortOrder": [
         "Namespace",
         "Function",
